--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,6 +15,7 @@ body {
 }
 a {
     text-decoration: none;
+    color: black;
 }
 /* ====================== Header ====================== */
 
@@ -219,4 +220,113 @@ nav .active a::after {
     font-size: 14px;
     line-height: 26px;
     color: #5f5b53;
+}
+
+/* ====================== Popular ====================== */
+.popular {
+    padding-top: 152px;
+}
+.popular .popular-top {
+    display: flex;
+    align-items: center;
+}
+
+.popular .info .lv2 {
+    font-family: Sen;
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 48px;
+}
+
+.popular .info .desc {
+    margin-top: 6px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 30px;
+    width: 458px;
+    color: #5f5b53;
+}
+
+.popular .popular-top .controls {
+    margin-left: auto;
+}
+
+.popular .popular-top .controls img {
+    width: 6px;
+    height: 12px;
+}
+
+.popular .popular-top .controls button {
+    background: none;
+    border-radius: 50%;
+    border: 1px solid var(--primary-color);
+    padding: 0;
+    width: 40px;
+    height: 40px;
+}
+
+.popular .popular-top .controls button:last-child {
+    background-color: var(--primary-color);
+}
+.popular .course-list {
+    padding-top: 35px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular .course-list .info,
+.foot {
+    padding: 10px 22px 0 22px;
+}
+.popular .course-item {
+    width: 370px;
+    height: 466px;
+    opacity: 1;
+    border-radius: 12px;
+    box-shadow: 0px 18px 36px 0px #0000000d;
+}
+.popular .course-item .thumb {
+    width: 370px;
+    height: 278px;
+    border-radius: 12px 12px 0 0;
+}
+.popular .head {
+    display: flex;
+    justify-content: space-between;
+}
+.popular .course-item .info .title {
+    width: 159px;
+    font-weight: 600;
+    font-style: SemiBold;
+    font-size: 18px;
+    line-height: 30px;
+}
+.popular .course-item .line-2 {
+    width: 326px;
+    height: 52px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 26px;
+}
+
+.popular .course-list .foot {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.popular .course-list .foot .price {
+    font-family: Poppins;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 30px;
+}
+.popular .course-list .foot .book-btn {
+    width: 118px;
+    height: 50px;
+    opacity: 1;
+    border-radius: 25px;
+}
+.popular .course-list .foot .book-btn:hover {
+    background-color: var(--primary-color);
+    border: none;
 }
