--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,8 @@ nav a {
     color: #5f5b53;
 }
 
-nav .active a {
+nav .active a,
+nav li a:hover {
     text-shadow: 1px 0 0 currentColor;
     color: #171100;
 }
