--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -403,3 +403,47 @@ nav .active a::after {
     width: 740px;
     height: 160px;
 }
+
+/* ====================== Features ====================== */
+.features {
+    padding-top: 115px;
+}
+.features .body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.features .images {
+    flex-direction: row;
+}
+.features .images img {
+    width: 270px;
+    height: 404px;
+    border-radius: 16px;
+}
+.features .images img:last-child {
+    position: relative;
+    top: -28px;
+    margin-left: 22px;
+}
+.features .content {
+    width: 470px;
+    height: 322px;
+}
+.features .content .heading {
+    font-weight: 700;
+    font-size: 38px;
+    line-height: 48px;
+}
+.features .content .desc {
+    margin-top: 15px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    color: #5f5b53;
+}
+.features .cta-btn {
+    margin-top: 30px;
+    width: 137px;
+    background-color: var(--primary-color);
+}
