--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -404,7 +404,7 @@ nav .active a::after {
     height: 160px;
 }
 
-/* ====================== Features ====================== */
+/* ====================== Features 1 ====================== */
 .features {
     padding-top: 115px;
 }
@@ -446,4 +446,20 @@ nav .active a::after {
     margin-top: 30px;
     width: 137px;
     background-color: var(--primary-color);
+}
+
+/* ====================== Features 2 ====================== */
+.features-2nd {
+    margin-top: 105px;
+}
+.features-2nd .body {
+    flex-flow: row-reverse;
+}
+.features-2nd .content {
+    width: 570px;
+    height: 298px;
+}
+.features-2nd .images img {
+    width: 470px;
+    height: 440px;
 }
