--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,11 @@ a {
 .header {
     background: #fffcf4;
 }
+.header.fixed {
+    top: -28px;
+    position: sticky;
+    z-index: 1;
+}
 .heading {
     font-family: var(--font-heading);
     font-weight: 700;
